<resources>
    <string name="app_name">Food Runner</string>
    <string name="food_runner">FoodRunner</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="don_t_have_an_account_sign_up_now"><u>Don\'t have an account?Sign up now</u></string>
    <string name="name_min_3_characters">Name (Min.3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password (Min. 4 characters</string>
    <string name="register">REGISTER</string>
    <string name="next">NEXT</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered Mobile number and email below:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="rate">₹ %s/person</string>
    <string name="menu_price">₹ %s</string>

    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="instagram">Instagram</string>
    <string name="apply">Apply</string>
    <string name="rating">Rating</string>
    <string name="cost_for_one">Cost For One</string>
    <string name="clear_all">Clear All</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below</string>
    <string name="view_cart">View Cart</string>
    <string name="add">Add</string>
    <string name="place_order">PLACE ORDER (Total Rs. %s)</string>
    <string name="ordering_from_s">Ordering from : %s</string>
    <string name="your_order_has_been_placed_successfully_placed">Your order has been placed successfully placed!</string>
    <string name="ok">OK</string>
    <string name="your_previous_orders_are_listed_below">Your Previous orders are listed below</string>
    <string name="total_cost_s">Total Cost ₹%s</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone no</string>
    <string name="email_id">email id</string>
    <string name="city_name">City</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="runner">Runner</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="food">FOOD</string>
    <string name="change"><u>Change</u></string>
    <string name="deliver_to_address_s">Deliver to/n  %s</string>
    <string name="_20_off_on_orders_above_500">20% Off on orders above ₹500</string>
    <string name="_10_off_on_orders_above_200">10% Off on orders above ₹200</string>
    <string name="_20_off_on_orders_above_rs_500">20% off on orders above Rs.500</string>
    <string name="_10_off_on_orders_above_rs_200">10% off on orders above Rs.200</string>
    <string name="q_1_how_does_food_runner_work">Q.1 How does Food Runner work?</string>
    <string name="a_1_food_runner_is_an_online_food_delivery_service_that_connects_you_to_local_restaurants_forget_the_hassle_of_cooking_for_yourself_and_let_someone_else_make_the_food_and_deliver_it_straight_to_your_door_simply_log_onto_our_app_or_website_and_place_your_order_we_ll_send_you_a_text_to_confirm_what_your_delivery_pick_up_time_is_and_soon_enough_you_ll_have_a_delicious_stress_free_meal">A.1 Food Runner is an online food delivery service that connects you to local restaurants.Forget the hassle of cooking for yourself,and let someone else make the food and deliver it straight to your door.Simply log onto our app or website and place your order. We\'ll send you a text to confirm what your delivery/pick up time is, and soon enough you\'ll have a delicious stress-free meal.</string>
    <string name="q2">Q.2 About Forgot Password</string>
    <string name="a2">A.2 If you had forgotten your password,then click on forgot password present on login page then fill the required details after filling in the details click onn Next then you will receive an otp on your registered email id.The otp sent on the email can be used for next 24 hours</string>
    <string name="q3">Q.3 How to share your Favorite Restaurants?</string>
    <string name="a3">A.3 You are provide with a list of Restaurants ,you can easily share your favourite ones with your friends,family and others easily using share option provide</string>
    <string name="q4">Q.4 When to Apply Coupon?</string>
    <string name="a4">A.4 You can use coupon to get 10% off on orders above Rs.200 and 20% off on orders above Rs.500.While you place order click on apply coupon if your total value is above Rs 200 or Rs.500 and use the coupon</string>
    <string name="q5">Q.5 Can we reorder?</string>
    <string name="a5">A.5 You can\'t reorder as we have not added the functionality but we\'ll soon work on it so you can easily place your past order anytime</string>
    <string name="Food">🅕🅞🅞🅓</string>
    <string name="Runner">ⓇⓊⓃⓃⒺⓇ</string>
    <string name="enter_details">Enter Details</string>
    <string name="registered_email">Registered Email</string>
    <string name="hello">Hello</string>
    <string name="sign_into_your_account">Sign into your Account</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="register_now">Register Now</string>
    <string name="s_s_ss">ʏᴏᴜʀ ᴏʀᴅᴇʀ ʜᴀs ʙᴇᴇɴ ᴘʟᴀᴄᴇᴅ sᴜᴄᴄᴇssғᴜʟʟʏ!</string>
    <string name="enter_otp_and_details">Enter OTP and Details</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Sort">ՏօɾԵ</string>
    <string name="q1">Q.1 How does Food Runner work?</string>
    <string name="a1">A.1 Food Runner is an online food delivery service that connects you to local restaurants.Forget the hassle of cooking for yourself,and let someone else make the food and deliver it straight to your door.Simply log onto our app or website and place your order. We\'ll send you a text to confirm what your delivery/pick up time is, and soon enough you\'ll have a delicious stress-free meal.</string>
    <string name="Q2">Q.2 I need to cancel my order.</string>
    <string name="A2">A.2 We understand sometimes things don\'t go as planned, and you might need to cancel an order. We can cancel an order if the restaurant hasn\'t started cooking it yet. If the restaurant has started to cook your food there is a small chance they might still be able to cancel, so best to call them and find out.</string>
    <string name="Q3">Q.3 Once I\'ve placed my order, can I contact the restaurant direct?</string>
    <string name="A3">A.3 Sure can! Check your confirmation email for the restaurant number and give them a buzz if you have any questions or requests on the prep and delivery of the food. Feel free to give us a buzz too, we\'re always happy to help out if you\'ve not been able to get through to the restaurant.</string>
    <string name="Q4">Q.4 Can I order in advance?</string>
    <string name="A4">A.4 Absolutely. In fact, we encourage advanced orders to ensure you get your delivery at your desired time. Simply select your desired delivery time when you start your order. This will allow you to create your order hours, days or even weeks ahead of time</string>
    <string name="Q5">Q.5 How will the food be delivered to me?</string>
    <string name="A5">A.5 Absolutely. In fact, we encourage advanced orders to ensure you get your delivery at your desired time. Simply select your desired delivery time when you start your order. This will allow you to create your order hours, days or even weeks ahead of time</string>
    <string name="mark_your_favourite_and_add_them_to_your_list_of_favourite_items">Mark Your Favourite and add them to your \'List of Favourite items\'</string>
    <string name="retry">Retry</string>
    <string name="order">Place Your First order and enjoy the meal</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="dosa">Dosa</string>
    <string name="reorder">ReOrder</string>
    <string name="create_account">Create Account</string>

</resources>
