<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/Sort"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:text="@string/clear_all"
        android:textColor="#ff9933"
        android:textSize="14sp"
        android:textStyle="italic" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_sort"
        android:orientation="vertical"
        android:padding="8dp">

        <RadioButton
            android:id="@+id/rbCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cost_for_one" />

        <RadioButton
            android:id="@+id/rbRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/rating"
            android:textStyle="normal" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/radioGroup"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/my_btn_green"
        android:gravity="center"
        android:text="@string/apply"
        android:textColor="@color/colorWhite" />


</RelativeLayout>