<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F7FD">

    <LinearLayout
        android:id="@+id/burger_img"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_burger2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/burger_img"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Food"
            android:textColor="#FF7D18"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Runner"
            android:textColor="#FF7D18"
            android:textSize="26sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="6dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/bg_ll"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/txt_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/enter_details"
                android:textColor="@color/colorBlack"
                android:textSize="22sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:src="@drawable/phone_no" />

            <EditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentWhite"
                android:hint="@string/mobile_number_10_digits"
                android:maxLines="1"
                android:padding="6dp"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:src="@drawable/email_img" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/transparentWhite"
                android:hint="@string/registered_email"
                android:maxLines="1"
                android:textSize="15sp" />


        </LinearLayout>


        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/mybutton"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/next"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"></Button>

    </LinearLayout>


</RelativeLayout>