<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F7FD">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Food"
            android:textColor="#FF7D18"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Runner"
            android:textColor="#FF7D18"
            android:textSize="26sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="6dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/bg_ll"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/cv_ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/create_account"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:src="@drawable/profile_name" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/transparentWhite"
                android:hint="@string/name_min_3_characters"
                android:maxLines="1"

                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:orientation="horizontal"

            >


            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:src="@drawable/email_img"

                />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/transparentWhite"
                android:hint="@string/email_address"
                android:maxLines="1"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ll_email">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:src="@drawable/phone_no"

                />

            <EditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/transparentWhite"
                android:hint="@string/mobile_number_10_digits"
                android:inputType="number"
                android:maxLines="1"
                android:textSize="15sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_delivery"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ll_mobile_number">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:src="@drawable/location" />

            <EditText
                android:id="@+id/et_delivery_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/transparentWhite"
                android:hint="@string/delivery_address"
                android:maxLines="1"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ll_delivery">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/lock_img" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/transparentWhite"
                android:hint="@string/password_min_4_characters"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ll_password">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/lock_img" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/transparentWhite"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="15sp" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/mybutton"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/register_now"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"/>

    </LinearLayout>


</RelativeLayout>