<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/ll_twenty_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="2dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#ffffff"
            android:text="@string/_20_off_on_orders_above_rs_500"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_apply_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.5"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/apply"
            android:textColor="#ff7d18"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_ten_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_twenty_off"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="2dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#ffffff"
            android:text="@string/_10_off_on_orders_above_rs_200"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_apply_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.5"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/apply"
            android:textColor="#ff7d18"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>